--- a/src/css/main.css
+++ b/src/css/main.css
@@ -170,14 +170,12 @@ body {
 @media only screen and (min-width: 768px) {
   .header-carousel__control {
     border: 70px solid transparent;
-    top: -webkit-calc(50% - 70px);
     top: calc(50% - 70px);
   }
 }
 @media only screen and (min-width: 970px) {
   .header-carousel__control {
     border: 100px solid transparent;
-    top: -webkit-calc(50% - 100px);
     top: calc(50% - 100px);
   }
 }
@@ -186,7 +184,6 @@ body {
   width: 44px;
   height: 32px;
   position: absolute;
-  top: -webkit-calc(50% - 16px);
   top: calc(50% - 16px);
   background-image: url(../img/dsg/arrw.png);
   background-repeat: no-repeat;
@@ -284,9 +281,9 @@ body {
 }
 .bg-block::after {
   content: '';
+  display: none;
   width: 1000%;
   height: 380px;
-  display: block;
   position: absolute;
   top: 70px;
   left: -30px;
@@ -295,6 +292,7 @@ body {
 }
 @media only screen and (min-width: 768px) {
   .bg-block::after {
+    display: block;
     top: -100px;
     left: -30px;
   }
@@ -384,4 +382,13 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: 1;
+}
+.modal {
+  width: 95%;
+  margin: 0 auto;
+}
+@media only screen and (min-width: 768px) {
+  .modal {
+    width: auto;
+  }
 }
