--- a/src/css/less/gl_vars.less
+++ b/src/css/less/gl_vars.less
@@ -3,11 +3,11 @@
 
 @font-face {
     font-family: "Roboto";
-    src: local("Roboto"), url(../../fonts/Roboto-Regular.ttf); 
+    src: local("Roboto"), url(../fonts/Roboto-Regular.ttf);
 }
 
 @font-face {
     font-family: "Fira Sans";
-    src: local("Fira Sans"), url(../../fonts/FiraSans-Regular.ttf); 
+    src: local("Fira Sans"), url(../fonts/FiraSans-Regular.ttf);
 }
 
