--- a/src/css/less/main.less
+++ b/src/css/less/main.less
@@ -107,7 +107,7 @@
 		height: 21px;
 		top: -4px;
 		left: 0;
-		background-image: url(../../img/dsg/balloon.png);
+		background-image: url(../img/dsg/balloon.png);
 		background-repeat: no-repeat;
 		background-size: contain;
 		background-position: center;
