--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,394 +1,1 @@
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"), url(../fonts/Roboto-Regular.ttf);
-}
-@font-face {
-  font-family: "Fira Sans";
-  src: local("Fira Sans"), url(../fonts/FiraSans-Regular.ttf);
-}
-body {
-  font-family: "Roboto", sans-serif;
-  overflow-x: hidden;
-}
-@media (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
-.z-index-1 {
-  z-index: -1;
-}
-@media only screen and (min-width: 768px) {
-  .header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-  }
-}
-.header-logo {
-  margin: 0;
-}
-.header-logo a:hover,
-.header-logo a:active,
-.header-logo a:visited,
-.header-logo a:focus {
-  text-decoration: none;
-}
-.header-logo__str-1 {
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.45);
-  color: white;
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 1.8;
-}
-.header-logo__str-2 {
-  color: #ffea00;
-  font-family: "Fira Sans";
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 1.08;
-  text-transform: uppercase;
-}
-.navbar-default.header-navbar {
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  margin-top: 35px;
-  float: right;
-  min-height: auto;
-  position: fixed;
-  top: -15px;
-  right: 15px;
-  width: 90%;
-}
-@media only screen and (min-width: 768px) {
-  .navbar-default.header-navbar {
-    width: auto;
-    position: relative;
-  }
-}
-.header-navbar__menu {
-  font-size: 30px;
-  font-weight: 300;
-  text-transform: uppercase;
-  color: #111111;
-  line-height: 52px;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 30px 0;
-  margin: 0;
-  z-index: 3;
-}
-@media only screen and (min-width: 768px) {
-  .header-navbar__menu {
-    width: auto;
-    background-color: transparent;
-    padding: 0;
-    margin: 7.5px -15px;
-  }
-}
-.header-navbar__item {
-  position: relative;
-  text-align: center;
-  padding: 10px 0;
-  width: 80%;
-  margin: 0 auto;
-}
-@media only screen and (min-width: 768px) {
-  .header-navbar__item {
-    text-align: left;
-    padding: 0;
-    width: auto;
-    margin: auto;
-  }
-  .header-navbar__item:first-child {
-    margin-right: 30px;
-  }
-}
-.header-navbar__item:first-child::after {
-  content: '';
-  width: 1px;
-  height: 22px;
-  background-color: white;
-  position: absolute;
-  top: 0;
-  right: -15px;
-}
-.header-navbar__item .header-navbar__item-link {
-  padding: 0;
-}
-.header__btn-cnt {
-  display: block;
-  width: 100%;
-}
-@media only screen and (min-width: 768px) {
-  .header__btn-cnt {
-    width: initial;
-    text-align: center;
-    margin-top: 30px;
-    float: left;
-  }
-}
-@media only screen and (min-width: 970px) {
-  .header__btn-cnt {
-    float: right;
-  }
-}
-.header__btn {
-  width: 245px;
-  height: 45px;
-  border-radius: 22px;
-  background-color: white;
-  color: #f9bf3a;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.83;
-  margin: 0 auto;
-  display: block;
-}
-@media only screen and (min-width: 768px) {
-  .header__btn {
-    display: inline-block;
-    margin: initial;
-  }
-}
-.header__btn:hover,
-.header__btn:active,
-.header__btn:focus {
-  color: #e09e07;
-}
-.header-carousel__img {
-  width: 100%;
-}
-.header-carousel__control {
-  width: 0;
-  height: 0;
-}
-@media only screen and (min-width: 768px) {
-  .header-carousel__control {
-    border: 70px solid transparent;
-    top: calc(50% - 70px);
-  }
-}
-@media only screen and (min-width: 970px) {
-  .header-carousel__control {
-    border: 100px solid transparent;
-    top: calc(50% - 100px);
-  }
-}
-.header-carousel__control::before {
-  content: '';
-  width: 44px;
-  height: 32px;
-  position: absolute;
-  top: calc(50% - 16px);
-  background-image: url(../img/dsg/arrw.png);
-  background-repeat: no-repeat;
-  background-size: 200%;
-}
-.header-carousel__control.left {
-  border-right: 0;
-}
-@media only screen and (min-width: 768px) {
-  .header-carousel__control.left {
-    border-left: 70px solid white;
-  }
-}
-@media only screen and (min-width: 970px) {
-  .header-carousel__control.left {
-    border-left: 100px solid white;
-  }
-}
-.header-carousel__control.left::before {
-  background-position: 0 0;
-}
-@media only screen and (min-width: 768px) {
-  .header-carousel__control.left::before {
-    left: -60px;
-  }
-}
-@media only screen and (min-width: 970px) {
-  .header-carousel__control.left::before {
-    left: -80px;
-  }
-}
-.header-carousel__control.left:hover::before {
-  background-position: 0 -36px;
-}
-.header-carousel__control.right {
-  border-right: 100px solid white;
-  border-left: 0;
-}
-@media only screen and (min-width: 768px) {
-  .header-carousel__control.right {
-    border-right: 70px solid white;
-  }
-}
-@media only screen and (min-width: 970px) {
-  .header-carousel__control.right {
-    border-right: 100px solid white;
-  }
-}
-.header-carousel__control.right::before {
-  background-position: -45px 0;
-}
-@media only screen and (min-width: 768px) {
-  .header-carousel__control.right::before {
-    right: -60px;
-  }
-}
-@media only screen and (min-width: 970px) {
-  .header-carousel__control.right::before {
-    right: -80px;
-  }
-}
-.header-carousel__control.right:hover::before {
-  background-position: -45px -36px;
-}
-.main {
-  padding: 50px 0;
-}
-@media only screen and (min-width: 768px) {
-  .main {
-    padding: 95px 0 50px;
-  }
-}
-.main__cont {
-  max-width: 835px;
-}
-.main__hdr-cnt-1 {
-  padding-bottom: 20px;
-  display: inline-block;
-  position: relative;
-}
-.main__hdr-cnt-2 {
-  margin-top: 100px;
-  display: inline-block;
-  position: relative;
-}
-.hr-line::after {
-  content: '';
-  width: 1000%;
-  height: 4px;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-color: #ffea00;
-}
-.bg-block::after {
-  content: '';
-  display: none;
-  width: 1000%;
-  height: 380px;
-  position: absolute;
-  top: 70px;
-  left: -30px;
-  background-color: whitesmoke;
-  z-index: -1;
-}
-@media only screen and (min-width: 768px) {
-  .bg-block::after {
-    display: block;
-    top: -100px;
-    left: -30px;
-  }
-}
-.main__hdr-cnt-3 {
-  position: relative;
-  margin-top: 30px;
-}
-@media only screen and (min-width: 768px) {
-  .main__hdr-cnt-3 {
-    margin-top: 0;
-  }
-}
-.main__hdr {
-  margin: 0;
-  color: #222222;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 52px;
-  text-transform: uppercase;
-}
-.main__txt-cnt-1 {
-  margin-top: 60px;
-}
-.main__txt-cnt-2 {
-  margin-top: 40px;
-}
-.main__call,
-.main__tel-list,
-.main__txt {
-  margin: 0;
-  color: #222222;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: justify;
-}
-.main__adress-cnt {
-  margin-top: 60px;
-}
-.main__adress {
-  padding-left: 30px;
-  color: #222222;
-  font-size: 16px;
-  font-weight: 400;
-  position: relative;
-  text-align: justify;
-}
-.main__adress::before {
-  content: '';
-  position: absolute;
-  width: 26px;
-  height: 21px;
-  top: -4px;
-  left: 0;
-  background-image: url(../img/dsg/balloon.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-}
-.main__call-cnt {
-  margin-top: 40px;
-}
-.main__call {
-  font-weight: 700;
-}
-.main__tel-list-cnt {
-  margin-top: 20px;
-}
-.main__tel-list {
-  padding: 0;
-}
-.main__tel {
-  list-style-type: none;
-}
-.map {
-  width: 100%;
-  height: 430px;
-}
-.footer__txt-cont {
-  padding: 30px 0;
-}
-.footer__txt {
-  margin: 0;
-  text-align: center;
-  color: #777777;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1;
-}
-.modal {
-  width: 95%;
-  margin: 0 auto;
-}
-@media only screen and (min-width: 768px) {
-  .modal {
-    width: auto;
-  }
-}
+@font-face{font-family:Roboto;src:local("Roboto"),url(../fonts/Roboto-Regular.ttf)}@font-face{font-family:"Fira Sans";src:local("Fira Sans"),url(../fonts/FiraSans-Regular.ttf)}body{font-family:Roboto,sans-serif;overflow-x:hidden}@media (min-width:1200px){.container{width:1200px}}.z-index-1{z-index:-1}@media only screen and (min-width:768px){.header{position:absolute;top:0;left:0;right:0;z-index:1}}.header-logo{margin:0}.header-logo a:active,.header-logo a:focus,.header-logo a:hover,.header-logo a:visited{text-decoration:none}.header-logo__str-1{text-shadow:0 1px 3px rgba(0,0,0,.45);color:#fff;font-family:Roboto;font-size:20px;font-weight:400;line-height:1.8}.header-logo__str-2{color:#ffea00;font-family:"Fira Sans";font-size:48px;font-weight:700;line-height:1.08;text-transform:uppercase}.navbar-default.header-navbar{background-color:transparent;border:0;margin:35px 0 0;min-height:auto;position:fixed;top:-15px;right:15px;width:90%}@media only screen and (min-width:768px){.navbar-default.header-navbar{width:auto;position:relative}}.header-navbar__menu{display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-moz-box-orient:vertical;-moz-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-justify-content:flex-start;-moz-box-pack:start;-ms-flex-pack:start;justify-content:flex-start;min-height:350px;width:100%;margin:0;padding:30px 0;text-transform:uppercase;background-color:rgba(255,255,255,.9);border:1px solid #ffea00;font-size:30px;font-weight:300;color:#111;line-height:52px;z-index:3}@media only screen and (min-width:768px){.header-navbar__menu{-webkit-flex-direction:row;-moz-box-orient:horizontal;-moz-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-justify-content:flex-end;-moz-box-pack:end;-ms-flex-pack:end;justify-content:flex-end;background-color:transparent;padding:0;margin:7.5px -15px;border:none}}.header-navbar__menu li.header-navbar__item{float:none;position:relative;text-align:center;padding:10px 0;width:80%;margin:0 auto}@media only screen and (min-width:768px){.header-navbar__menu li.header-navbar__item{text-align:left;padding:0;width:auto;margin:0}.header-navbar__menu li.header-navbar__item:first-child{margin-right:30px}}.header-navbar__menu li.header-navbar__item:first-child::after{content:'';width:1px;height:22px;background-color:#fff;position:absolute;top:0;right:-15px}.header-navbar__menu li.header-navbar__item .header-navbar__item-link{padding:0}.header__btn-cnt{display:block;width:100%}@media only screen and (min-width:768px){.header__btn-cnt{width:initial;text-align:right;margin-top:30px}}.header__btn{width:245px;height:45px;border-radius:22px;background-color:#fff;border:1.5px solid #ffea00;color:#f9bf3a;font-size:18px;font-weight:400;line-height:1.83;margin:45px 0 0;display:block}.header__btn:active,.header__btn:focus,.header__btn:hover{color:#e09e07}.header-carousel__img{width:100%}.header-carousel__control{width:0;height:0}@media only screen and (min-width:768px){.header__btn{display:inline-block;margin:initial;border:none}.header-carousel__control{border:70px solid transparent;top:-webkit-calc(50% - 70px);top:calc(50% - 70px)}}@media only screen and (min-width:970px){.header-carousel__control{border:100px solid transparent;top:-webkit-calc(50% - 100px);top:calc(50% - 100px)}}.header-carousel__control::before{content:'';width:44px;height:32px;position:absolute;top:-webkit-calc(50% - 16px);top:calc(50% - 16px);background-image:url(../img/dsg/arrw.png);background-repeat:no-repeat;background-size:200%}.main__hdr-cnt-1,.main__hdr-cnt-2{display:inline-block;position:relative}.header-carousel__control.left{border-right:0}@media only screen and (min-width:768px){.header-carousel__control.left{border-left:70px solid #fff}.header-carousel__control.left::before{left:-60px}}.header-carousel__control.left::before{background-position:0 0}@media only screen and (min-width:970px){.header-carousel__control.left{border-left:100px solid #fff}.header-carousel__control.left::before{left:-80px}}.header-carousel__control.left:hover::before{background-position:0 -36px}.header-carousel__control.right{border-right:100px solid #fff;border-left:0}@media only screen and (min-width:768px){.header-carousel__control.right{border-right:70px solid #fff}.header-carousel__control.right::before{right:-60px}}.header-carousel__control.right::before{background-position:-45px 0}@media only screen and (min-width:970px){.header-carousel__control.right{border-right:100px solid #fff}.header-carousel__control.right::before{right:-80px}}.header-carousel__control.right:hover::before{background-position:-45px -36px}.main{padding:50px 0}@media only screen and (min-width:768px){.main{padding:95px 0 50px}}.main__cont{max-width:835px}.main__hdr-cnt-1{padding-bottom:20px}.main__hdr-cnt-2{margin-top:100px}.bg-block::after,.hr-line::after{width:1000%;position:absolute;content:''}.hr-line::after{height:4px;display:block;bottom:0;right:0;background-color:#ffea00}.bg-block::after{display:none;height:380px;top:70px;left:-30px;background-color:#f5f5f5;z-index:-1}.main__hdr-cnt-3{position:relative;margin-top:30px}@media only screen and (min-width:768px){.bg-block::after{display:block;top:-100px;left:-30px}.main__hdr-cnt-3{margin-top:0}}.main__hdr{margin:0;color:#222;font-size:30px;font-weight:700;line-height:52px;text-transform:uppercase}.main__adress,.main__call,.main__tel-list,.main__txt{color:#222;font-size:16px;font-weight:400;text-align:justify}.main__txt-cnt-1{margin-top:60px}.main__txt-cnt-2{margin-top:40px}.main__call,.main__tel-list,.main__txt{margin:0;line-height:30px}.main__adress-cnt{margin-top:60px}.main__adress{padding-left:30px;position:relative}.main__adress::before{content:'';position:absolute;width:26px;height:21px;top:-4px;left:0;background-image:url(../img/dsg/balloon.png);background-repeat:no-repeat;background-size:contain;background-position:center}.main__call-cnt{margin-top:40px}.main__call{font-weight:700}.main__tel-list-cnt{margin-top:20px}.main__tel-list{padding:0}.main__tel{list-style-type:none}.map{width:100%;height:430px}.footer__txt-cont{padding:30px 0}.footer__txt{margin:0;text-align:center;color:#777;font-size:14px;font-weight:400;line-height:1}.modal{width:95%;margin:0 auto}@media only screen and (min-width:768px){.modal{width:auto}}
