--- a/src/css/less/header.less
+++ b/src/css/less/header.less
@@ -1,6 +1,4 @@
 .header {
-	
-	
 
 	@media @tablet {
 		position: absolute;
@@ -48,7 +46,7 @@
 	border: 0;
 	margin: 0;
 	margin-top: 35px;
-	float: right;
+	//float: right;
 	min-height: auto;
 	position: fixed;
 	top: -15px;
@@ -61,27 +59,35 @@
 	}
 }
 .header-navbar__menu{
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	min-height: 350px;
+	width: 100%;
+	margin: 0;
+	padding: 30px 0;
+	text-transform: uppercase;
+	background-color: rgba(255, 255, 255, 0.9);
+	border: 1px solid #ffea00;
 	font-size: 30px;
 	font-weight: 300;
-	text-transform: uppercase;
 	color: #111111;
 	line-height: 52px;
-	width: 100%;
-	background-color: rgba(255, 255, 255, 0.9);
-	padding: 30px 0;
-	margin: 0;
 	z-index: 3;
 
 	@media @tablet {
-		width: auto;
+		flex-direction: row;
+		justify-content: flex-end;
 		background-color: transparent;
 		padding: 0;
 		margin: 7.5px -15px;
+		border: none;
 	}
 
 }
 
-.header-navbar__item {
+.header-navbar__menu li.header-navbar__item {
+	float: none;
 	position: relative;
 	text-align: center;
 	padding: 10px 0; 
@@ -93,14 +99,12 @@
 		text-align: left;
 		padding: 0;
 		width: auto;
-		margin: auto;
+		margin: 0;
 
 		&:first-child {
 			margin-right: 30px;
 		} 
 	}
-
-	
 
 	&:first-child::after {
 		content: '';
@@ -126,13 +130,13 @@
 
 	@media @tablet {
 		width: initial;
-		text-align: center;
+		text-align: right;
 		margin-top: 30px;
-		float: left;	
+		//float: left;
 	}
 
 	@media @laptop {
-		float: right;
+		//float: right;
 	}
 	
 }
@@ -142,16 +146,18 @@
 	height: 45px;
 	border-radius: 22px;
 	background-color: #fff;
+	border: 1.5px solid #ffea00;
 	color: #f9bf3a;
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 1.83;
-	margin: 0 auto; 
+	margin: 45px 0 0;
     display: block;
 
 	@media @tablet {
 		display: inline-block;
 		margin: initial;
+		border: none;
 	}
 
 	&:hover,
@@ -193,7 +199,7 @@
 		height: 32px;
 		position: absolute;
 		top: ~'calc(50% - 16px)';		
-		background-image: url(../../img/dsg/arrw.png);
+		background-image: url(../img/dsg/arrw.png);
 		background-repeat: no-repeat;
 		background-size: 200%;
 		
