--- a/src/css/less/header.less
+++ b/src/css/less/header.less
@@ -79,6 +79,7 @@
 		flex-direction: row;
 		justify-content: flex-end;
 		background-color: transparent;
+		min-height: auto;
 		padding: 0;
 		margin: 7.5px -15px;
 		border: none;
